class NamedElement:
    """
    An element with a name.

    """

    def __init__(self, name):
        """
        Constructor.

        :param name: String, name of the named element
        :return:
        """
        self.name = name
